slightly fixed spacing

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -84,7 +84,7 @@ $light-gray: #cacaca;
 }
 
 	.clock__display {
-		padding: rem(7px) rem(15px);
+		padding: rem(7px) rem(15px) rem(8px);
 		border-radius: 4px;
 		background-color: #0f1620;
 		box-shadow: inset 0px 2px 0px 0px rgba(11,17,26,0.7), 0px 2px 0px 0px rgba(45,54,66,0.7);
